--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ input{
     height: 40px;
     width: 600px;
     border-radius: 8%;
-    font-size: x-large;
+    font-size: 70em;
 }
 
 .frontPage{
@@ -24,4 +24,11 @@ input{
     font-family: Cambria;
     color: #25161b;
     font-size: xx-large;
+    animation-name: fadeInText;
+    animation-duration: 4s;
+}
+
+@keyframes fadeInText{
+    from {opacity: 0%;}
+    to {opacity: 100%;}
 }
